--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
 }
 
 .container {
-    max-width: 600px;
-    width: 50%;
+    max-width: 90%;
+    width: 40%;
     padding: 20px;
     background-color: lightskyblue;
     border-radius: 20px;
@@ -84,6 +84,17 @@ body {
     border: 1px solid cornflowerblue;
     border-radius: 12px;
     font-family:Georgia, 'Times New Roman', Times, serif;
+}
+@media only screen and (max-width: 600px) {
+  .container {
+    max-width: 90%; 
+    width: 60%;
+  }
+  button {
+    width: 90%; 
+    margin-top: 10px; 
+  }
+  
 }
   
   
