--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
   button {
     cursor: pointer;
     padding: 4px;
-    margin-right: 20px; 
+    margin-right: 60px; 
     justify-content: space-between;
   }
   
@@ -85,17 +85,22 @@ body {
     border-radius: 12px;
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 780px) {
   .container {
-    width: 85%; 
+    width: 70%; 
     margin-bottom: 14px;
-    height: 310px;
-   
-    
+    height: 350px;
+    margin-left: 5px;
+    margin-right: 10px;
+    background-color: lightskyblue;
+    border-radius: 10px;
+    border: 1px solid black;
+    box-shadow: 9px 9px 6px lightpink;
   }
   button {
-    width: 70%; 
+    width: 80%; 
     margin-top: 10px; 
+    margin-left: 30px;
   }
   .container header{
     text-align: center;
@@ -105,15 +110,17 @@ body {
     font-family:cursive
   }
   .quote {
-    margin-top: 20px;
-    font-size: 10px;
-    line-height: 1.2;
+    margin-top: 10px;
+    font-size: 5px;
+    line-height: 1.1;
     align-items: center;
     font-family: Indie Flower;
     margin-left: 10px;
     margin-right: 10px;
   }
- 
+  .container fontset{
+    font-size: 5px;
+  }
 
 }
   
