--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body {
     box-shadow: 9px 9px 6px lightpink;
   }
   button {
-    width: 80%; 
+    width: 85%; 
     margin-top: 10px; 
     margin-left: 30px;
   }
@@ -115,8 +115,9 @@ body {
     line-height: 1.1;
     align-items: center;
     font-family: Indie Flower;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 10px;
   }
   .container fontset{
     font-size: 5px;
